# oxmltotext

./: .gitignore  LICENSE  README.md  go.mod  go.sum  go.work  go.work.sum
benchmark/: Makefile  go.mod  go.sum  main.go  parse_doc.go  parse_doc_test.go  parse_docx.go  parse_docx_test.go  parse_pdf.go  parse_pdf_test.go  parse_ppt.go  parse_ppt_test.go  parse_pptx.go  parse_pptx_test.go  parse_xls.go  parse_xls_test.go  parse_xlsx.go  parse_xlsx_test.go  string_join.go  string_join_test.go
doctotext/: doctotext.go  doctotext_test.go
docxtotext/: docxparser.go  docxtotext.go  docxtotext_test.go  opendocx.go  parsedrawings.go
filesamples/: file-sample_100kb.docx  file-sample_100kb.xls  file-sample_100kb.xlsx  file-sample_500kb.pptx
ocr/: default.go  not.go
pdftotext/: openpdf.go  pdfparser.go  pdftotext.go  pdftotext_test.go
ppttotext/: ppttotext.go  ppttotext_test.go
pptxtotext/: openpptx.go  parsedrawings.go  pptxparser.go  pptxtotext.go  pptxtotext_test.go
tikaserver/: local.sh  tika-config.xml
types/: errors.go  images.go  interfaces.go  mimetypes.go  types_test.go
utils/: fasthttp.go  mimetype.go  qxml.go  strings.go  tempfile.go  unsafe.go  utils_test.go
xlstotext/: xlstotext.go  xlstotext_test.go
xlstotext/rs/: Cargo.toml
xlstotext/rs/benches/: bench_xlstotext.rs
xlstotext/rs/src/: app.rs  errors.rs  lib.rs  main.rs  totext.rs
xlsxtotext/: openxlsx.go  parsedrawings.go  xlsxparser.go  xlsxtotext.go  xlsxtotext_test.go
