[package]
name = "xlstotext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.22.1"
clap = { version = "4.4.8", features = ["cargo", "derive"] }
csv = "1.3.0"
guard = "0.5.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_xlstotext"
harness = false
